Fix doodle jump

--- a/public/css/myCSS.css
+++ b/public/css/myCSS.css
@@ -162,3 +162,7 @@ body {
 .imgContainer {
     margin-bottom: 10%;
 }
+
+.doodle-container {
+    padding-left: 0;
+}
